tests/compile-error/fake.c
#include "fake.h"

int invalid(int x, int y)
{
   return x + y;
}
